--- a/app/src/main/res/layout/fragment_user.xml
+++ b/app/src/main/res/layout/fragment_user.xml
@@ -20,7 +20,7 @@
 
         <LinearLayout
             android:id="@+id/tvHistory"
-            android:layout_width="wrap_content"
+            android:layout_width="@dimen/vs_145"
             android:layout_height="@dimen/vs_100"
             android:layout_gravity="center"
             android:layout_margin="@dimen/vs_5"
@@ -36,8 +36,8 @@
 
 
             <ImageView
-                android:layout_width="@dimen/vs_50"
-                android:layout_height="@dimen/vs_50"
+                android:layout_width="@dimen/vs_40"
+                android:layout_height="@dimen/vs_40"
                 android:layout_gravity="center"
                 android:alpha="0.75"
                 android:src="@drawable/icon_history" />
@@ -46,20 +46,20 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_marginLeft="@dimen/vs_10"
+                android:layout_marginLeft="@dimen/vs_5"
                 android:focusable="false"
                 android:focusableInTouchMode="false"
-                android:gravity="center"
+                android:gravity="center|start"
                 android:text="历史"
                 android:textAlignment="gravity"
                 android:textColor="@color/color_CCFFFFFF"
-                android:textSize="@dimen/ts_40" />
+                android:textSize="@dimen/ts_26" />
 
         </LinearLayout>
 
         <LinearLayout
             android:id="@+id/tvLive"
-            android:layout_width="wrap_content"
+            android:layout_width="@dimen/vs_145"
             android:layout_height="@dimen/vs_100"
             android:layout_gravity="center"
             android:layout_margin="@dimen/vs_5"
@@ -75,8 +75,8 @@
 
 
             <ImageView
-                android:layout_width="@dimen/vs_50"
-                android:layout_height="@dimen/vs_50"
+                android:layout_width="@dimen/vs_40"
+                android:layout_height="@dimen/vs_40"
                 android:layout_gravity="center"
                 android:alpha="0.75"
                 android:src="@drawable/icon_live" />
@@ -85,20 +85,20 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_marginLeft="@dimen/vs_10"
+                android:layout_marginLeft="@dimen/vs_5"
                 android:focusable="false"
                 android:focusableInTouchMode="false"
                 android:gravity="center"
                 android:text="直播"
                 android:textAlignment="gravity"
                 android:textColor="@color/color_CCFFFFFF"
-                android:textSize="@dimen/ts_40" />
+                android:textSize="@dimen/ts_26" />
 
         </LinearLayout>
 
         <LinearLayout
             android:id="@+id/tvSearch"
-            android:layout_width="wrap_content"
+            android:layout_width="@dimen/vs_145"
             android:layout_height="@dimen/vs_100"
             android:layout_gravity="center"
             android:layout_margin="@dimen/vs_5"
@@ -114,8 +114,8 @@
 
 
             <ImageView
-                android:layout_width="@dimen/vs_50"
-                android:layout_height="@dimen/vs_50"
+                android:layout_width="@dimen/vs_40"
+                android:layout_height="@dimen/vs_40"
                 android:layout_gravity="center"
                 android:alpha="0.75"
                 android:src="@drawable/icon_search" />
@@ -124,21 +124,21 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_marginLeft="@dimen/vs_10"
+                android:layout_marginLeft="@dimen/vs_5"
                 android:focusable="false"
                 android:focusableInTouchMode="false"
                 android:gravity="center"
                 android:text="搜索"
                 android:textAlignment="gravity"
                 android:textColor="@color/color_CCFFFFFF"
-                android:textSize="@dimen/ts_40" />
+                android:textSize="@dimen/ts_26" />
 
         </LinearLayout>
 
 
         <LinearLayout
             android:id="@+id/tvPush"
-            android:layout_width="wrap_content"
+            android:layout_width="@dimen/vs_145"
             android:layout_height="@dimen/vs_100"
             android:layout_gravity="center"
             android:layout_margin="@dimen/vs_5"
@@ -154,8 +154,8 @@
 
 
             <ImageView
-                android:layout_width="@dimen/vs_50"
-                android:layout_height="@dimen/vs_50"
+                android:layout_width="@dimen/vs_40"
+                android:layout_height="@dimen/vs_40"
                 android:layout_gravity="center"
                 android:alpha="0.75"
                 android:src="@drawable/icon_push" />
@@ -164,20 +164,20 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_marginLeft="@dimen/vs_10"
+                android:layout_marginLeft="@dimen/vs_5"
                 android:focusable="false"
                 android:focusableInTouchMode="false"
                 android:gravity="center"
                 android:text="推送"
                 android:textAlignment="gravity"
                 android:textColor="@color/color_CCFFFFFF"
-                android:textSize="@dimen/ts_40" />
+                android:textSize="@dimen/ts_26" />
 
         </LinearLayout>
 
         <LinearLayout
             android:id="@+id/tvFavorite"
-            android:layout_width="wrap_content"
+            android:layout_width="@dimen/vs_145"
             android:layout_height="@dimen/vs_100"
             android:layout_gravity="center"
             android:layout_margin="@dimen/vs_5"
@@ -193,8 +193,8 @@
 
 
             <ImageView
-                android:layout_width="@dimen/vs_50"
-                android:layout_height="@dimen/vs_50"
+                android:layout_width="@dimen/vs_40"
+                android:layout_height="@dimen/vs_40"
                 android:layout_gravity="center"
                 android:alpha="0.75"
                 android:src="@drawable/icon_collect" />
@@ -203,21 +203,21 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_marginLeft="@dimen/vs_10"
+                android:layout_marginLeft="@dimen/vs_5"
                 android:focusable="false"
                 android:focusableInTouchMode="false"
                 android:gravity="center"
                 android:text="收藏"
                 android:textAlignment="gravity"
                 android:textColor="@color/color_CCFFFFFF"
-                android:textSize="@dimen/ts_40" />
+                android:textSize="@dimen/ts_26" />
 
         </LinearLayout>
 
 
         <LinearLayout
             android:id="@+id/tvSetting"
-            android:layout_width="wrap_content"
+            android:layout_width="@dimen/vs_145"
             android:layout_height="@dimen/vs_100"
             android:layout_gravity="center"
             android:layout_margin="@dimen/vs_5"
@@ -233,8 +233,8 @@
 
 
             <ImageView
-                android:layout_width="@dimen/vs_50"
-                android:layout_height="@dimen/vs_50"
+                android:layout_width="@dimen/vs_40"
+                android:layout_height="@dimen/vs_40"
                 android:layout_gravity="center"
                 android:alpha="0.75"
                 android:src="@drawable/icon_setting" />
@@ -243,14 +243,14 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_marginLeft="@dimen/vs_10"
+                android:layout_marginLeft="@dimen/vs_5"
                 android:focusable="false"
                 android:focusableInTouchMode="false"
                 android:gravity="center"
                 android:text="设置"
                 android:textAlignment="gravity"
                 android:textColor="@color/color_CCFFFFFF"
-                android:textSize="@dimen/ts_40" />
+                android:textSize="@dimen/ts_26" />
 
         </LinearLayout>
 
